Fix modal spacing

--- a/src/index.scss
+++ b/src/index.scss
@@ -70,7 +70,7 @@ table {
 		box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
 		text-align: center;
 		position: relative;
-		max-width: 60%;
+		max-width: 30%;
 
 		h2 {
 			font-family: 'Yeseva One', cursive;
@@ -78,13 +78,13 @@ table {
 		}
 
 		p {
-			line-height: 130%;
-		}
+			line-height: 110%;
 
-		p.disclaimer {
-			line-height: 130%;
-			font-size: 0.8em;
-			color: #787878;
+			&.disclaimer {
+				line-height: 130%;
+				font-size: 0.8em;
+				color: #787878;
+			}
 		}
 	}
 
